--- a/css/fonts.css
+++ b/css/fonts.css
@@ -9,3 +9,9 @@
     color: white;
     font-size: 13px;
 }
+
+.white-normal-18{
+    font-family: 'Inter', sans-serif;
+    color: white;
+    font-size: 18px;
+}
