--- a/css/header.css
+++ b/css/header.css
@@ -29,6 +29,14 @@
     color: white;
 }
 
+.link-logo{
+    margin-bottom: -5px;
+}
+
+.menu{
+    display: none;
+}
+
 .client-area-button{
     background-color: #BD202E;
     border: 0px;
@@ -48,12 +56,18 @@
 
 .header{
     background-color: #104D7B;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
+.mobile-logo{
+    display: none;
+}
+
 .header-nav{
+    display: flex;
     margin-right: 30px;
 }
 
@@ -89,6 +103,7 @@
     padding: 10px 16px;
     text-decoration: none;
     display: block;
+    transition: .3s;
 }
 
 .separador{
@@ -101,15 +116,32 @@
     display: block;
 }
 
+.dropdown-content a:hover{
+    background-color: #560c11;
+    border-radius: 0px 0px 8px 8px;
+    font-size: 13.5px;
+}
 
-@media(max-width: 768px){
+
+@media(max-width: 930px){
     .header-nav{
         display: none;
+    }
+    .menu{
+        display: block;
+        margin-right: 30px;
+        cursor: pointer;
     }
 }
 
 @media(max-width: 600px){
     .top-header{
+        display: none;
+    }
+    .mobile-logo{
+        display: block;
+    }
+    .link-logo{
         display: none;
     }
 }
