--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,3 +1,9 @@
+.white-normal-10{
+    font-family: 'Inter', sans-serif;
+    color: white;
+    font-size: 11px;
+}
+
 .white-italic-12{
     font-family: 'Inter', sans-serif;
     color: white;
@@ -11,8 +17,56 @@
     font-size: 13px;
 }
 
+.white-normal-15{
+    font-family: 'Inter', sans-serif;
+    color: white;
+    font-size: 15px;
+}
+
 .white-normal-18{
     font-family: 'Inter', sans-serif;
     color: white;
     font-size: 18px;
+}
+
+.black-normal-30{
+    font-family: 'Inter', sans-serif;
+    color: #000000;
+    font-size: 30px;
+}
+
+.black-normal-18{
+    font-family: 'Inter', sans-serif;
+    color: #000000;
+    font-size: 18px;
+}
+
+.noto-green-normal-60{
+    font-family: 'Noto Sans', sans-serif;
+    color: #53E261;
+    font-size: 60px;
+}
+
+.noto-green-normal-40{
+    font-family: 'Noto Sans', sans-serif;
+    color: #00B2FF;
+    font-size: 40px;
+}
+
+.bl-normal-40{
+    font-family: 'Inter', sans-serif;
+    color: #104D7B;
+    font-size: 40px;
+}
+
+.bl-normal-60{
+    font-family: 'Inter', sans-serif;
+    color: #104D7B;
+    font-size: 60px;
+}
+
+.red-normal-60{
+    font-family: 'Inter', sans-serif;
+    color: #BD202E;
+    font-size: 60px;
 }
