--- a/css/main-index.css
+++ b/css/main-index.css
@@ -12,6 +12,119 @@
 }
 
 .img-main{
-    width: 1366px;
+    width: 16000px;
     max-width: 100%;
+}
+
+.main-contaienr-imgs h2{
+    margin-bottom: -20px;
+}
+
+.imgs-contenet-p{
+    text-align: center;
+    position: absolute;
+    margin-left: 800px;
+    margin-top: 100px
+}
+
+.imgs-content{
+    position: relative;
+    text-align: center;
+    margin-top: -650px;
+    margin-left: 650px;
+}
+
+@media(max-width: 2560px){
+    .imgs-content{
+        margin-top: -1150px;
+        margin-left: 1100px;
+    }
+    .imgs-content h1{
+        font-size: 120px;
+    }
+    .imgs-content h2{
+        font-size: 70px;
+    }
+}
+
+@media(max-width: 1440px){
+    .imgs-content{
+        margin-top: -650px;
+        margin-left: 700px;
+    }
+    .imgs-content h1{
+        font-size: 80px;
+    }
+    .imgs-content h2{
+        font-size: 40px;
+    }
+}
+
+@media(max-width: 1024px){
+    .imgs-content{
+        margin-top: -450px;
+        margin-left: 500px;
+    }
+    .imgs-content h1{
+        font-size: 60px;
+    }
+    .imgs-content h2{
+        font-size: 40px;
+    }
+}
+
+@media(max-width: 768px){
+    .imgs-content h1{
+        font-size: 40px;
+    }
+    .imgs-content h2{
+        font-size: 20px
+    }
+    .imgs-content{
+        margin-top: -350px;
+        margin-left: 350px;
+    }
+}
+
+@media(max-width: 425px){
+    .main-container-index-som h1{
+        font-size: 40px;
+        margin-bottom: 10px;
+    }
+    .main-container-index-som h2{
+        font-size: 30px;
+    }
+    .index-main{
+        margin-top: 10px;
+    }
+    .imgs-content{
+        margin-top: -200px;
+        margin-left: 200px;
+    }
+    .imgs-content h1{
+        font-size: 25px;
+    }
+    .imgs-content h2{
+        font-size: 15px;
+    }
+}
+
+@media(max-width: 375px){
+    .imgs-content{
+        margin-top: -180px;
+        margin-left: 180px;
+    }
+}
+
+@media(max-width: 320px){
+    .imgs-content{
+        margin-top: -150px;
+        margin-left: 150px;
+    }
+    .imgs-content h1{
+        font-size: 20px;
+    }
+    .imgs-content h2{
+        font-size: 10px;
+    }
 }
