--- a/css/fonts.css
+++ b/css/fonts.css
@@ -89,3 +89,15 @@
     color: #BD202E;
     font-size: 60px;
 }
+
+.noto-blue-normal-40{
+    font-family: 'Noto Sans', sans-serif;
+    color: #104D7B;
+    font-size: 40px;
+}
+
+.noto-red-normal-60{
+    font-family: 'Noto Sans', sans-serif;
+    color: #BD202E;
+    font-size: 60px;
+}
