--- a/css/fonts.css
+++ b/css/fonts.css
@@ -23,6 +23,12 @@
     font-size: 15px;
 }
 
+.white-normal-21{
+    font-family: 'Inter', sans-serif;
+    color: white;
+    font-size: 21px;
+}
+
 .white-normal-18{
     font-family: 'Inter', sans-serif;
     color: white;
