--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 @import url(/css/fonts.css);
 @import url(/css/carrossel.css);
 @import url(/css/main-index.css);
+@import url(/css/footer.css);
 /* IMPORTS CSS */
 
 html{
