--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 /* IMPORTS FONTS */
 
 /* IMPORTS CSS */
-@import url(/css/header.css);
+@import url(../css/header.css);
 @import url(/css/fonts.css);
 @import url(/css/carrossel.css);
 @import url(/css/main-index.css);
