--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@
 /* IMPORTS FONTS */
 
 /* IMPORTS CSS */
-@import url(../css/header.css);
-@import url(/css/fonts.css);
-@import url(/css/carrossel.css);
-@import url(/css/main-index.css);
-@import url(/css/footer.css);
+@import url(css/header.css);
+@import url(css/fonts.css);
+@import url(css/carrossel.css);
+@import url(css/main-index.css);
+@import url(css/footer.css);
 /* IMPORTS CSS */
 
 html{
