--- a/css/footer.css
+++ b/css/footer.css
@@ -36,3 +36,16 @@
 .footer-rights p{
     padding: 15px;
 }
+
+@media(max-width: 663px){
+    .footer-head-content p{
+        display: none;
+    }
+    .footer-head{
+        justify-content: center;
+    }
+    .footer-img{
+        padding: 20px;
+        margin-left: 50px;
+    }
+}
