--- a/css/login.css
+++ b/css/login.css
@@ -7,6 +7,7 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: rgba(230, 230, 230, 0.8);
     background-size: cover;
+    max-width: 100%;
 }
 
 a{
@@ -19,7 +20,7 @@ a:hover{
 }
 
 .div-princ{
-    background-color: rgba(0, 0, 0, 0.9);
+    background-color: rgba(0, 0, 0);
     position: absolute;
     top: 50%;
     left: 50%;
