--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 @import url(css/carrossel.css);
 @import url(css/main-index.css);
 @import url(css/footer.css);
+@import url(css/contact.css);
 /* IMPORTS CSS */
 
 html{
