--- a/css/pag_mobilidade.css
+++ b/css/pag_mobilidade.css
@@ -1,7 +1,9 @@
 .degrade {
-    background-image:url(/img/background\ telefonia.jpg);
-    background-position: center;
+    background-image:url(/img/Background\ mobilidade.jpg);
+    background-position: 0px;
     background-size: 100%;
+    background-color: azure;
+    
 }
 
 img {
@@ -16,28 +18,29 @@ img {
 
 .icone {
     padding: 15px;
-    display: flex;    
-}
-
-.contrate{
-    transition: transform 500ms linear;
-}
-.contrate:hover{
-    transform: scale(1.10);
-    
+    display: flex;
+    margin-left: 15px;
 }
 
 .titulos {
     display: flex;
     font-size: 50px;
     color: aliceblue;
-    margin-top: 60px;   
+    margin-top: 60px;
+    border-color:  black;   
 }
 
 .degrade > h2 {
     font-size: 25px;
     color: aliceblue;
     margin-left: 40px;
+}
+
+.contrate{
+    transition: transform 500ms linear;
+}
+.contrate:hover{
+    transform: scale(1.10);    
 }
 
 pre {
@@ -53,10 +56,9 @@ pre {
     margin-top: 70px;
     font-size: 18px;
     text-align: center;
-    margin-left: 300px; 
-    margin-right: 300px;
-    gap: 20px;    
-    
+    margin-left: 500px; 
+    margin-right: 500px;
+    gap: 70px;    
 }
 
 
@@ -65,7 +67,8 @@ pre {
     background-color:rgb(255, 255, 255);
     border: 1px solid gray;
     max-width: 300px;   
-         
+    padding: 0px 10px; /*Foi mexido para aumentar a largura da div*/
+    margin: auto;
 }
 
 
@@ -73,11 +76,6 @@ pre {
    display: flex;
    margin: auto;
    margin-top: 10px; 
-}
-
-.icon{
-    margin: 0 auto 5px auto;
-    
 }
 
 
@@ -90,7 +88,10 @@ pre {
     margin: 0 0 30px 0;
     border-radius: 10px;
     border-color: #AA0E27;
-    font-family: Arial, Helvetica, sans-serif;      
+    font-family: Arial, Helvetica, sans-serif;     
+}
+
+.botoes:hover{
     
 }
 
