--- a/css/pagina_telefonia.css
+++ b/css/pagina_telefonia.css
@@ -16,8 +16,7 @@ img {
 
 .icone {
     padding: 15px;
-    display: flex;
-    
+    display: flex;    
 }
 
 .titulos {
@@ -25,6 +24,14 @@ img {
     font-size: 50px;
     color: aliceblue;
     margin-top: 60px;   
+}
+
+.contrate{
+    transition: transform 500ms linear;
+}
+.contrate:hover{
+    transform: scale(1.10);
+    
 }
 
 .degrade > h2 {
