--- a/css/pagina_internet.css
+++ b/css/pagina_internet.css
@@ -63,7 +63,8 @@ pre {
     background-color:rgb(255, 255, 255);
     border: 1px solid gray;
     max-width: 400px;
-    margin: auto;      
+    margin: auto; 
+    box-shadow: 6px 6px 9px grey;     
 }
 
 .flex2 {
@@ -74,6 +75,7 @@ pre {
     text-align: center;
     margin-left: 400px;
     margin-right: 400px; 
+    
 }
 .evento {
     border-radius: 10px;
@@ -81,7 +83,7 @@ pre {
     border: 1px solid gray;
     max-width: 400px;
     margin: 0px -20px 0px 100px;
-    
+    box-shadow: 6px 6px 9px grey;
 }
 
 .icons{
