--- a/css/pag_rede_infra.css
+++ b/css/pag_rede_infra.css
@@ -65,7 +65,7 @@ pre {
     background-color:rgb(255, 255, 255);
     border: 1px solid gray;
     max-width: 300px;   
-         
+    box-shadow: 6px 6px 9px grey;     
 }
 
 
