--- a/css/main-index.css
+++ b/css/main-index.css
@@ -7,6 +7,59 @@
     text-align: center;
 }
 
+.index-main-container{
+    margin: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 50px;
+}
+
+.main-container-options{
+    background-color: rgb(58, 58, 58);
+    color: white;
+    border-radius: 50px;
+    width: 400px;
+    height: 320px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    transition: .3s;
+}
+
+.main-options{
+    margin: 30px;
+}
+
+.main-options h2{
+    margin-top: 10px;
+}
+
+.icon-options{
+    color: #ffffff;
+    font-size: 50px;
+    background-color: #1167A8;
+    border-radius: 50px;
+    padding: 20px;
+    transition: .3s;
+}
+
+.about-main{
+    color: #ffffff;
+    border: 0px;
+    background-color: #00d9ff;
+    padding: 10px;
+    border-radius: 50px;
+    margin: 20px 0px 0px 240px;
+    cursor: pointer;
+}
+
+.main-container-options:hover{
+    background-color: rgb(42, 42, 42);
+}
+
+.main-container-options:hover .icon-options{
+    background-color: #0091ff;
+}
+
 .main-container-index-som h1{
     margin-top: -15px;
     margin-bottom: 70px;
@@ -79,6 +132,15 @@
 @media(max-width: 1584px){
     .movel-index-img{
         max-width: 900px;
+    }
+}
+
+@media(max-width: 1400px){
+    .main-container-options{
+        width: 380px;
+    }
+    .about-main{
+        margin: 20px 0px 0px 230px;
     }
 }
 
