--- a/css/header.css
+++ b/css/header.css
@@ -1,10 +1,26 @@
-header{
-    margin-bottom: 10px;
+.menu-mobile{
+    display: none;
 }
 
-.client-button{
+.mobile-logo{
+    display: none;
+}
+
+.client-area{
     display: flex;
     align-items: center;
+    padding: 3px 10px;
+}
+
+.client-area-button{
+    background-color: #BD202E;
+    border: 0px;
+    border-radius: 100px;
+    transition: .3s;
+}
+
+.client-area-button:hover{
+    background-color: #8a0f1a;
 }
 
 .material-symbols-outlined{
@@ -15,27 +31,6 @@ header{
     margin-bottom: -5px;
 }
 
-.menu{
-    display: none;
-}
-
-.client-area-button{
-    background-color: #BD202E;
-    border: 0px;
-    border-radius: 100px;
-    transition: .3s;
-}
-
-.client-area{
-    display: flex;
-    align-items: center;
-    padding: 3px 10px;
-}
-
-.client-area-button:hover{
-    background-color: #af1320;
-}
-
 .header{
     background-color: #31353B;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -44,91 +39,48 @@ header{
     justify-content: space-between;
 }
 
-.mobile-logo{
-    display: none;
+#txt{
+    color: #ffffff;
 }
 
-.header-nav{
+.header-ul{
     display: flex;
     margin-right: 30px;
-}
-
-.header-nav ul{
-    display: flex;
+    align-items: center;
     gap: 30px;
-    align-items: center;
 }
 
-.header-nav ul li a{
-    align-items: center;
-    color: #ffffff;
-    display: flex;
-}
-
-.separador-vertical{
-    position: absolute;
-    border: 1px solid rgb(189, 189, 189, 0.2);
-    height: 30px;
-    margin-left: 450px;
-    border-radius: 50px;
-}
-
-.dropdown{
-    position: relative;
-    display: inline-block;
-}
-
-.dropdown-content a{
-    color: white;
-    padding: 10px 16px;
-    text-decoration: none;
-    display: block;
-    transition: .3s;
-}
-
-.nav-mobile{
-    display: none;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown-content a:hover{
-    background-color: #560c11;
-    border-radius: 0px 0px 8px 8px;
-    font-size: 13.5px;
-}
-
-
-@media(max-width: 930px){
-    .header-nav{
-        display: none;
+@media(max-width: 768px){
+    .header-ul{
+        display: block;
+        position: absolute;
+        width: 100%;
+        top: 58px;
+        height: 0px;
+        right: -30px;
+        text-align: center;
+        transition: .6s;
+        background-color: #31353B;
+        visibility: hidden;
+        overflow-y: hidden;
+        z-index: 10000;
     }
-    .menu{
+    .menu-mobile{
         display: block;
         margin-right: 30px;
         cursor: pointer;
     }
-    .nav-mobile{
-        display: none;
-        position: absolute;
-        top: 96px;
-        right: 0px;
-        background-color: #ffffff;
-        width: 95%;
-        height: calc(100vh - 70px);
-        z-index: 1000;
+    .header-ul.ativado{
+        height: 2772px;
+        visibility: visible;
+        overflow-y: auto;
     }
-    #btnMobile.ativo .nav-mobile{
-        display: block;
+    .header-itens{
+        margin-top: 50px
     }
 }
 
 @media(max-width: 600px){
-    .top-header{
-        display: none;
-    }
     .mobile-logo{
         display: block;
         margin: 10px 20px;
