--- a/css/pag_mobilidade.css
+++ b/css/pag_mobilidade.css
@@ -1,5 +1,5 @@
 .degrade {
-    background-image:url(/img/Background\ mobilidade.jpg);
+    background-image:url(../img/Background\ mobilidade.jpg);
     background-position: center;
     background-size: 100%;
 }
