--- a/css/pagina_internet.css
+++ b/css/pagina_internet.css
@@ -1,5 +1,5 @@
 .degrade {
-    background-image:url(/img/bacground\ internet.jpg);
+    background-image:url(../img/bacground\ internet.jpg);
     background-position: center;
     background-size: 100%;
 }
