--- a/css/pag_rede_infra.css
+++ b/css/pag_rede_infra.css
@@ -1,5 +1,5 @@
 .degrade {
-    background-image:url(/img/background\ telefonia.jpg);
+    background-image:url(../img/background\ telefonia.jpg);
     background-position: center;
     background-size: 100%;
 }
